Worked on getting ports working and just made some basic progress

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
 	</head>
 	<body>
 		<script>
+			//https://stackoverflow.com/questions/33697444/data-persistence-in-elm
 			var app = Elm.Main.fullscreen();
+			app.ports.saveSession.subscribe(function (state) {
+				localStorage.setItem('user', JSON.stringify(state));
+			});
+
+			app.ports.doLoadSession.subscribe(function () {
+				app.ports.loadSession.send(localStorage.getItem('user'));
+			});
+
 		</script>
 	</body>
 </html>
