Got a little farther and got elm calling js code. Now I need the path back

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			});
 
 			app.ports.doLoadSession.subscribe(function () {
+				console.log("doLoadSession!");
 				app.ports.loadSession.send(localStorage.getItem('user'));
 			});
 
