So close to getthing localstorage working

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 			//https://stackoverflow.com/questions/33697444/data-persistence-in-elm
 			var app = Elm.Main.fullscreen();
 			app.ports.saveSession.subscribe(function (state) {
-				localStorage.setItem('user', JSON.stringify(state));
+				console.log("Saving something!");
+				console.log(state);
+				
+				//localStorage.setItem('user', JSON.stringify(state));
 			});
 
 			app.ports.doLoadSession.subscribe(function () {
