Move the css loading into the index.html instead of the layout

--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" property="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"/>
+		<link rel="stylesheet" property="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic"/>
+		<link rel="stylesheet" property="stylesheet" type="text/css" href="//demo.productionready.io/main.css"/>
+		<style type="text/css">
+			@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro);html {  margin: 0;  height: auto;}
+		</style>
 		<script src="elm.js"></script>
+
 	</head>
 	<body>
 		<script>
